# This Cargo.toml is here to let externals tools (IDEs, etc.) know that this is
# a Rust project. Your extensions dependencies should be added to the Cargo.toml
# in the ext/ directory.

[workspace]
members = ["./ext/digest/blake3_ext"]
resolver = "2"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
debug = true
