[package]
name = "blake3"
version = "0.1.0"
edition = "2021"
authors = ["Ian Ker-Seymer <ian.kerseymer@shopify.com>"]
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
rb-sys = { version = "*", features = ["stable-api-compiled-fallback"] }
blake3-impl = { package = "blake3", version = "1.5.0" }
hex = "0.4.3"
base64 = "0.21.4"
