[package]
name = "blake3_ext"
version = "0.1.0"
edition = "2024"
authors = ["Ian Ker-Seymer <ian.kerseymer@shopify.com>"]
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
rb-sys = { version = "0.9.124", features = ["stable-api-compiled-fallback"] }
blake3 = { version = "1.5" }

[dev-dependencies]
hex = "0.4.3"
rand = "0.9.2"
rb-sys-test-helpers = "0.3.0"

[build-dependencies]
rb-sys-env = "0.2.3"


[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
  'cfg(digest_use_rb_ext_resolve_symbol)',
] }
